update aug-cc-pVXZ (X=D, T, Q) basis sets for Li, Be, Na, and Mg

--- a/lib/basis/aug-cc-pvdz.kv
+++ b/lib/basis/aug-cc-pvdz.kv
@@ -16,6 +16,8 @@ basis:(
 %         6769 (1992).
 %Al - Cl: D.E. Woon and T.H. Dunning, Jr. J. Chem. Phys. 98, 1358 (1993).
 %
+% Li Be Na Mg: http://tyr0.chem.wsu.edu/~kipeters/basissets/alkal-nr.html
+%              B. Prascher, D.E. Woon, K.A. Peterson, T.H. Dunning, Jr., A.K. Wilson, Theor. Chem. Acc. 128, 60 (2011).
 %
 % BASIS SET: (4s,1p) -> [2s,1p]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p)
@@ -83,7 +85,8 @@ basis:(
                   4.581000000000e+00               2.827890000000e-01
                   1.580000000000e+00               4.531230000000e-01
                   5.640000000000e-01               2.747740000000e-01
-                  7.345000000000e-02               9.751000000000e-03})
+                  7.345000000000e-02               9.751000000000e-03
+                  2.805000000000e-02              -3.180000000000e-03})
   (type: [am = S]
     {exp coef:0} = {
                   1.469000000000e+03              -1.200000000000e-04
@@ -93,77 +96,83 @@ basis:(
                   4.581000000000e+00              -4.890200000000e-02
                   1.580000000000e+00              -9.600900000000e-02
                   5.640000000000e-01              -1.363800000000e-01
-                  7.345000000000e-02               5.751020000000e-01})
+                  7.345000000000e-02               5.751020000000e-01
+                  2.805000000000e-02               5.176610000000e-01})
   (type: [am = S]
     {exp coef:0} = {
                   2.805000000000e-02               1.000000000000e+00})
   (type: [am = S]
     {exp coef:0} = {
-                  8.640000000000e-03               1.000000000000e+00})
+                  8.600000000000e-03               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   1.534000000000e+00               2.278400000000e-02
                   2.749000000000e-01               1.391070000000e-01
-                  7.362000000000e-02               5.003750000000e-01})
+                  7.362000000000e-02               5.003750000000e-01
+                  2.403000000000e-02               5.084740000000e-01})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   2.403000000000e-02               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
-                  5.790000000000e-03               1.000000000000e+00})
+                  5.800000000000e-03               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  1.239000000000e-01               1.000000000000e+00})
+                  1.144000000000e-01               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  7.250000000000e-02               1.000000000000e+00})
- ]
-%
+                  7.330000000000e-02               1.000000000000e+00})
+]
 %
 % BASIS SET: (10s,5p,2d) -> [4s,3p,2d]
- beryllium: "aug-cc-pVDZ": [
-  (type: [am = s am = s]
-   {exp coef:0 coef:1} = {
-      2940.0000000      0.68000000000E-03 -0.12300000000E-03
-      441.20000000      0.52360000000E-02 -0.96600000000E-03
-      100.50000000      0.26606000000E-01 -0.48310000000E-02
-      28.430000000      0.99993000000E-01 -0.19314000000E-01
-      9.1690000000      0.26970200000     -0.53280000000E-01
-      3.1960000000      0.45146900000     -0.12072300000    
-      1.1590000000      0.29507400000     -0.13343500000    
-     0.18110000000      0.12587000000E-01  0.53076700000    
-   })
-  (type: [am = s]
-   {exp coef:0} = {
-     0.58900000000E-01   1.0000000000    
-   })
-  (type: [am = s]
-   {exp coef:0} = {
-     0.18770000000E-01   1.0000000000    
-   })
-  (type: [am = p]
-   {exp coef:0} = {
-      3.6190000000      0.29111000000E-01
-     0.71100000000      0.16936500000    
-     0.19510000000      0.51345800000    
-   })
-  (type: [am = p]
-   {exp coef:0} = {
-     0.60180000000E-01   1.0000000000    
-   })
-  (type: [am = p]
-   {exp coef:0} = {
-     0.85000000000E-02   1.0000000000    
-   })
-  (type: [(am = d puream = 1)]
-   {exp coef:0} = {
-     0.23800000000       1.0000000000    
-   })
-  (type: [(am = d puream = 1)]
-   {exp coef:0} = {
-     0.07400000000       1.0000000000    
-   })
- ]
+ beryllium:"aug-cc-pVDZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.940000000000e+03               6.800000000000e-04
+                  4.412000000000e+02               5.236000000000e-03
+                  1.005000000000e+02               2.660600000000e-02
+                  2.843000000000e+01               9.999300000000e-02
+                  9.169000000000e+00               2.697020000000e-01
+                  3.196000000000e+00               4.514690000000e-01
+                  1.159000000000e+00               2.950740000000e-01
+                  1.811000000000e-01               1.258700000000e-02
+                  5.890000000000e-02              -3.756000000000e-03})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.940000000000e+03              -1.230000000000e-04
+                  4.412000000000e+02              -9.660000000000e-04
+                  1.005000000000e+02              -4.831000000000e-03
+                  2.843000000000e+01              -1.931400000000e-02
+                  9.169000000000e+00              -5.328000000000e-02
+                  3.196000000000e+00              -1.207230000000e-01
+                  1.159000000000e+00              -1.334350000000e-01
+                  1.811000000000e-01               5.307670000000e-01
+                  5.890000000000e-02               5.801170000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.890000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.790000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.619000000000e+00               2.911100000000e-02
+                  7.110000000000e-01               1.693650000000e-01
+                  1.951000000000e-01               5.134580000000e-01
+                  6.018000000000e-02               4.793380000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  6.018000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.110000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.354000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  7.220000000000e-02               1.000000000000e+00})
+] 
 %
 % BASIS SET: (9s,4p,1d) -> [3s,2p,1d]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
@@ -456,7 +465,8 @@ basis:(
                   4.392000000000e+00               6.250540000000e-02
                   1.676000000000e+00              -6.245320000000e-03
                   5.889000000000e-01               2.433740000000e-03
-                  5.640000000000e-02              -4.423810000000e-04})
+                  5.640000000000e-02              -4.423810000000e-04
+                  2.307000000000e-02               2.419240000000e-04})
   (type: [am = S]
     {exp coef:0} = {
                   3.170000000000e+04              -1.121620000000e-04
@@ -469,7 +479,8 @@ basis:(
                   4.392000000000e+00               8.580090000000e-02
                   1.676000000000e+00               6.044190000000e-01
                   5.889000000000e-01               4.417190000000e-01
-                  5.640000000000e-02               1.305470000000e-02})
+                  5.640000000000e-02               1.305470000000e-02
+                  2.307000000000e-02              -5.680850000000e-03})
   (type: [am = S]
     {exp coef:0} = {
                   3.170000000000e+04               1.701600000000e-05
@@ -482,13 +493,14 @@ basis:(
                   4.392000000000e+00              -1.913680000000e-02
                   1.676000000000e+00              -1.025950000000e-01
                   5.889000000000e-01              -1.989450000000e-01
-                  5.640000000000e-02               6.559520000000e-01})
+                  5.640000000000e-02               6.559520000000e-01
+                  2.307000000000e-02               4.311530000000e-01})
   (type: [am = S]
     {exp coef:0} = {
                   2.307000000000e-02               1.000000000000e+00})
   (type: [am = S]
     {exp coef:0} = {
-                  7.250000000000e-03               1.000000000000e+00})
+                  7.200000000000e-03               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   1.381000000000e+02               5.796410000000e-03
@@ -497,7 +509,8 @@ basis:(
                   3.484000000000e+00               3.594010000000e-01
                   1.231000000000e+00               4.499880000000e-01
                   4.177000000000e-01               2.275070000000e-01
-                  6.513000000000e-02               8.082470000000e-03})
+                  6.513000000000e-02               8.082470000000e-03
+                  2.053000000000e-02              -1.962930000000e-03})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   1.381000000000e+02              -5.815310000000e-04
@@ -506,19 +519,20 @@ basis:(
                   3.484000000000e+00              -3.532680000000e-02
                   1.231000000000e+00              -5.219710000000e-02
                   4.177000000000e-01              -1.683590000000e-02
-                  6.513000000000e-02               4.346130000000e-01})
+                  6.513000000000e-02               4.346130000000e-01
+                  2.053000000000e-02               6.582180000000e-01})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   2.053000000000e-02               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
-                  6.330000000000e-03               1.000000000000e+00})
+                  5.700000000000e-03               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  9.730000000000e-02               1.000000000000e+00})
+                  9.280000000000e-02               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  4.680000000000e-02               1.000000000000e+00})
+                  4.800000000000e-02               1.000000000000e+00})
 ]
 %
 % BASIS SET: (13s,9p,2d) -> [5s,4p,2d]
@@ -536,7 +550,8 @@ basis:(
                   8.384000000000e+00               1.350890000000e-01
                   2.542000000000e+00               4.908840000000e-03
                   8.787000000000e-01               2.864600000000e-04
-                  1.077000000000e-01               2.645900000000e-05})
+                  1.077000000000e-01               2.645900000000e-05
+                  3.999000000000e-02              -1.127080000000e-05})
   (type: [am = S]
     {exp coef:0} = {
                   4.739000000000e+04              -8.778390000000e-05
@@ -549,7 +564,8 @@ basis:(
                   8.384000000000e+00              -3.412240000000e-02
                   2.542000000000e+00               5.704540000000e-01
                   8.787000000000e-01               5.423090000000e-01
-                  1.077000000000e-01               2.181280000000e-02})
+                  1.077000000000e-01               2.181280000000e-02
+                  3.999000000000e-02              -8.277000000000e-03})
   (type: [am = S]
     {exp coef:0} = {
                   4.739000000000e+04               1.696280000000e-05
@@ -562,13 +578,14 @@ basis:(
                   8.384000000000e+00               5.456420000000e-03
                   2.542000000000e+00              -1.340120000000e-01
                   8.787000000000e-01              -2.561760000000e-01
-                  1.077000000000e-01               6.058560000000e-01})
+                  1.077000000000e-01               6.058560000000e-01
+                  3.999000000000e-02               5.094460000000e-01})
   (type: [am = S]
     {exp coef:0} = {
                   3.999000000000e-02               1.000000000000e+00})
   (type: [am = S]
     {exp coef:0} = {
-                  1.488000000000e-02               1.000000000000e+00})
+                  1.420000000000e-02               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   1.799000000000e+02               5.381610000000e-03
@@ -577,7 +594,8 @@ basis:(
                   4.628000000000e+00               3.585350000000e-01
                   1.670000000000e+00               4.572260000000e-01
                   5.857000000000e-01               2.159180000000e-01
-                  1.311000000000e-01               6.649480000000e-03})
+                  1.311000000000e-01               6.649480000000e-03
+                  4.112000000000e-02              -1.253040000000e-04})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   1.799000000000e+02              -8.659480000000e-04
@@ -586,20 +604,21 @@ basis:(
                   4.628000000000e+00              -5.706470000000e-02
                   1.670000000000e+00              -8.739060000000e-02
                   5.857000000000e-01              -1.229900000000e-02
-                  1.311000000000e-01               5.020850000000e-01})
+                  1.311000000000e-01               5.020850000000e-01
+                  4.112000000000e-02               5.972450000000e-01})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   4.112000000000e-02               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
-                  9.350000000000e-03               1.000000000000e+00})
+                  1.050000000000e-02               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  1.870000000000e-01               1.000000000000e+00})
+                  1.932000000000e-01               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  5.950000000000e-02               1.000000000000e+00})
- ]
+                  6.050000000000e-02               1.000000000000e+00})
+]
 %
 % BASIS SET: (12s,8p,1d) -> [4s,3p,1d]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
