--- a/lib/basis/aug-cc-pvtz.kv
+++ b/lib/basis/aug-cc-pvtz.kv
@@ -16,6 +16,8 @@ basis:(
 %         6769 (1992).
 %Al - Cl: D.E. Woon and T.H. Dunning, Jr. J. Chem. Phys. 98, 1358 (1993).
 %
+% Li Be Na Mg: http://tyr0.chem.wsu.edu/~kipeters/basissets/alkal-nr.html
+%              B. Prascher, D.E. Woon, K.A. Peterson, T.H. Dunning, Jr., A.K. Wilson, Theor. Chem. Acc. 128, 60 (2011).
 %
 % BASIS SET: (5s,2p,1d) -> [3s,2p,1d]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
@@ -117,7 +119,9 @@ lithium:"aug-cc-pVTZ": [
                   7.406000000000e+00               1.657750000000e-01
                   2.930000000000e+00               3.150380000000e-01
                   1.189000000000e+00               3.935230000000e-01
-                  4.798000000000e-01               1.908700000000e-01})
+                  4.798000000000e-01               1.908700000000e-01
+                  7.509000000000e-02               5.414000000000e-03
+                  2.832000000000e-02              -1.328000000000e-03})
   (type: [am = S]
     {exp coef:0} = {
                   5.988000000000e+03              -2.100000000000e-05
@@ -128,7 +132,9 @@ lithium:"aug-cc-pVTZ": [
                   7.406000000000e+00              -2.809700000000e-02
                   2.930000000000e+00              -5.593600000000e-02
                   1.189000000000e+00              -9.923700000000e-02
-                  4.798000000000e-01              -1.121890000000e-01})
+                  4.798000000000e-01              -1.121890000000e-01
+                  7.509000000000e-02               5.678890000000e-01
+                  2.832000000000e-02               5.303820000000e-01})
   (type: [am = S]
     {exp coef:0} = {
                   7.509000000000e-02               1.000000000000e+00})
@@ -142,7 +148,9 @@ lithium:"aug-cc-pVTZ": [
     {exp coef:0} = {
                   3.266000000000e+00               8.630000000000e-03
                   6.511000000000e-01               4.753800000000e-02
-                  1.696000000000e-01               2.097720000000e-01})
+                  1.696000000000e-01               2.097720000000e-01
+                  5.578000000000e-02               5.285220000000e-01
+                  2.050000000000e-02               3.827440000000e-01})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   5.578000000000e-02               1.000000000000e+00})
@@ -154,87 +162,91 @@ lithium:"aug-cc-pVTZ": [
                   9.100000000000e-03               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  1.874000000000e-01               1.000000000000e+00})
+                  1.900000000000e-01               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  8.010000000000e-02               1.000000000000e+00})
+                  7.250000000000e-02               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  3.710000000000e-02               1.000000000000e+00})
+                  4.280000000000e-02               1.000000000000e+00})
   (type: [(am = F puream = 1)]
     {exp coef:0} = {
-                  1.829000000000e-01               1.000000000000e+00})
+                  1.270000000000e-01               1.000000000000e+00})
   (type: [(am = F puream = 1)]
     {exp coef:0} = {
-                  8.160000000000e-02               1.000000000000e+00})
- ]
+                  8.120000000000e-02               1.000000000000e+00})
+]
 %
 %
 % BASIS SET: (12s,6p,3d,2f) -> [5s,4p,3d,2f]
- beryllium: "aug-cc-pVTZ": [
-  (type: [am = s am = s]
-   {exp coef:0 coef:1} = {
-      6863.0000000      0.23600000000E-03 -0.43000000000E-04
-      1030.0000000      0.18260000000E-02 -0.33300000000E-03
-      234.70000000      0.94520000000E-02 -0.17360000000E-02
-      66.560000000      0.37957000000E-01 -0.70120000000E-02
-      21.690000000      0.11996500000     -0.23126000000E-01
-      7.7340000000      0.28216200000     -0.58138000000E-01
-      2.9160000000      0.42740400000     -0.11455600000    
-      1.1300000000      0.26627800000     -0.13590800000    
-     0.11010000000     -0.72750000000E-02  0.57744100000    
-   })
-  (type: [am = s]
-   {exp coef:0} = {
-     0.25770000000       1.0000000000    
-   })
-  (type: [am = s]
-   {exp coef:0} = {
-     0.44090000000E-01   1.0000000000    
-   })
-  (type: [am = s]
-   {exp coef:0} = {
-     0.15030000000E-01   1.0000000000    
-   })
-  (type: [am = p]
-   {exp coef:0} = {
-      7.4360000000      0.10736000000E-01
-      1.5770000000      0.62854000000E-01
-     0.43520000000      0.24818000000    
-   })
-  (type: [am = p]
-   {exp coef:0} = {
-     0.14380000000       1.0000000000    
-   })
-  (type: [am = p]
-   {exp coef:0} = {
-     0.49940000000E-01   1.0000000000    
-   })
-  (type: [am = p]
-   {exp coef:0} = {
-     0.07060000000E-01   1.0000000000    
-   })
-  (type: [(am = d puream = 1)]
-   {exp coef:0} = {
-     0.34800000000       1.0000000000    
-   })
-  (type: [(am = d puream = 1)]
-   {exp coef:0} = {
-     0.18030000000       1.0000000000    
-   })
-  (type: [(am = d puream = 1)]
-   {exp coef:0} = {
-     0.06540000000       1.0000000000    
-   })
-  (type: [(am = f puream = 1)]
-   {exp coef:0} = {
-     0.32500000000       1.0000000000    
-   })
-  (type: [(am = f puream = 1)]
-   {exp coef:0} = {
-     0.15330000000       1.0000000000    
-   })
- ]
+ beryllium:"aug-cc-pVTZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.863000000000e+03               2.360000000000e-04
+                  1.030000000000e+03               1.826000000000e-03
+                  2.347000000000e+02               9.452000000000e-03
+                  6.656000000000e+01               3.795700000000e-02
+                  2.169000000000e+01               1.199650000000e-01
+                  7.734000000000e+00               2.821620000000e-01
+                  2.916000000000e+00               4.274040000000e-01
+                  1.130000000000e+00               2.662780000000e-01
+                  2.577000000000e-01               1.819300000000e-02
+                  1.101000000000e-01              -7.275000000000e-03
+                  4.409000000000e-02               1.903000000000e-03})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.863000000000e+03              -4.300000000000e-05
+                  1.030000000000e+03              -3.330000000000e-04
+                  2.347000000000e+02              -1.736000000000e-03
+                  6.656000000000e+01              -7.012000000000e-03
+                  2.169000000000e+01              -2.312600000000e-02
+                  7.734000000000e+00              -5.813800000000e-02
+                  2.916000000000e+00              -1.145560000000e-01
+                  1.130000000000e+00              -1.359080000000e-01
+                  2.577000000000e-01               2.280260000000e-01
+                  1.101000000000e-01               5.774410000000e-01
+                  4.409000000000e-02               3.178730000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.577000000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.409000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.470000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.436000000000e+00               1.073600000000e-02
+                  1.577000000000e+00               6.285400000000e-02
+                  4.352000000000e-01               2.481800000000e-01
+                  1.438000000000e-01               5.236990000000e-01
+                  4.994000000000e-02               3.534250000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.438000000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.994000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.300000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.493000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.724000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  5.880000000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  3.423000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.188000000000e-01               1.000000000000e+00})
+]
 %
 % BASIS SET: (10s,5p,2d,1f) -> [4s,3p,2d,1f]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
@@ -650,7 +662,9 @@ sodium:"aug-cc-pVTZ": [
                   6.869000000000e+00               1.126330000000e-01
                   2.683000000000e+00               7.067970000000e-03
                   1.109000000000e+00               5.980100000000e-04
-                  6.015000000000e-02              -5.308700000000e-06})
+                  4.540000000000e-01               2.041300000000e-04
+                  6.015000000000e-02              -5.308700000000e-06
+                  2.382000000000e-02               1.826050000000e-06})
   (type: [am = S]
     {exp coef:0} = {
                   4.230000000000e+05              -4.406530000000e-06
@@ -666,7 +680,9 @@ sodium:"aug-cc-pVTZ": [
                   6.869000000000e+00              -4.388910000000e-02
                   2.683000000000e+00               3.379170000000e-01
                   1.109000000000e+00               5.613470000000e-01
-                  6.015000000000e-02               4.067540000000e-03})
+                  4.540000000000e-01               2.452400000000e-01
+                  6.015000000000e-02               4.067540000000e-03
+                  2.382000000000e-02              -1.267460000000e-03})
   (type: [am = S]
     {exp coef:0} = {
                   4.230000000000e+05               6.630190000000e-07
@@ -682,7 +698,9 @@ sodium:"aug-cc-pVTZ": [
                   6.869000000000e+00               7.635220000000e-03
                   2.683000000000e+00              -6.145890000000e-02
                   1.109000000000e+00              -1.157210000000e-01
-                  6.015000000000e-02               6.264060000000e-01})
+                  4.540000000000e-01              -1.589060000000e-01
+                  6.015000000000e-02               6.264060000000e-01
+                  2.382000000000e-02               4.754020000000e-01})
   (type: [am = S]
     {exp coef:0} = {
                   4.540000000000e-01               1.000000000000e+00})
@@ -691,7 +709,7 @@ sodium:"aug-cc-pVTZ": [
                   2.382000000000e-02               1.000000000000e+00})
   (type: [am = S]
     {exp coef:0} = {
-                  6.650000000000e-03               1.000000000000e+00})
+                  6.700000000000e-03               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   2.433000000000e+02               2.243920000000e-03
@@ -701,7 +719,9 @@ sodium:"aug-cc-pVTZ": [
                   2.521000000000e+00               3.785220000000e-01
                   9.607000000000e-01               3.949020000000e-01
                   3.512000000000e-01               1.604240000000e-01
-                  9.827000000000e-02               2.333110000000e-03})
+                  9.827000000000e-02               2.333110000000e-03
+                  3.734000000000e-02               1.995360000000e-03
+                  1.500000000000e-02              -7.773440000000e-04})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   2.433000000000e+02              -2.224010000000e-04
@@ -711,7 +731,9 @@ sodium:"aug-cc-pVTZ": [
                   2.521000000000e+00              -3.843300000000e-02
                   9.607000000000e-01              -4.501770000000e-02
                   3.512000000000e-01              -1.921320000000e-02
-                  9.827000000000e-02               1.826970000000e-01})
+                  9.827000000000e-02               1.826970000000e-01
+                  3.734000000000e-02               5.578970000000e-01
+                  1.500000000000e-02               3.730220000000e-01})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   3.734000000000e-02               1.000000000000e+00})
@@ -720,23 +742,23 @@ sodium:"aug-cc-pVTZ": [
                   1.500000000000e-02               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
-                  7.000000000000e-03               1.000000000000e+00})
+                  1.000000000000e-02               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  1.367000000000e-01               1.000000000000e+00})
+                  1.473000000000e-01               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  6.360000000000e-02               1.000000000000e+00})
+                  6.230000000000e-02               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  2.230000000000e-02               1.000000000000e+00})
+                  2.250000000000e-02               1.000000000000e+00})
   (type: [(am = F puream = 1)]
     {exp coef:0} = {
-                  1.397000000000e-01               1.000000000000e+00})
+                  1.284000000000e-01               1.000000000000e+00})
   (type: [(am = F puream = 1)]
     {exp coef:0} = {
-                  7.140000000000e-02               1.000000000000e+00})
- ]
+                  7.000000000000e-02               1.000000000000e+00})
+]
 %
 % BASIS SET: (16s,11p,3d,2f) -> [6s,5p,3d,2f]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
@@ -755,7 +777,9 @@ sodium:"aug-cc-pVTZ": [
                   4.306000000000e+00               3.326120000000e-02
                   1.826000000000e+00              -4.413350000000e-03
                   7.417000000000e-01               2.060240000000e-03
-                  7.612000000000e-02               7.081950000000e-04})
+                  1.457000000000e-01              -8.384700000000e-04
+                  7.612000000000e-02               7.081950000000e-04
+                  3.310000000000e-02              -2.006020000000e-04})
   (type: [am = S]
     {exp coef:0} = {
                   1.649000000000e+05              -1.842480000000e-05
@@ -770,7 +794,9 @@ sodium:"aug-cc-pVTZ": [
                   4.306000000000e+00               1.908490000000e-01
                   1.826000000000e+00               5.799640000000e-01
                   7.417000000000e-01               3.720290000000e-01
-                  7.612000000000e-02              -1.193440000000e-02})
+                  1.457000000000e-01               2.116910000000e-02
+                  7.612000000000e-02              -1.193440000000e-02
+                  3.310000000000e-02               2.773290000000e-03})
   (type: [am = S]
     {exp coef:0} = {
                   1.649000000000e+05               3.551760000000e-06
@@ -785,7 +811,9 @@ sodium:"aug-cc-pVTZ": [
                   4.306000000000e+00              -4.391400000000e-02
                   1.826000000000e+00              -1.510930000000e-01
                   7.417000000000e-01              -2.176680000000e-01
-                  7.612000000000e-02               5.472450000000e-01})
+                  1.457000000000e-01               2.598070000000e-01
+                  7.612000000000e-02               5.472450000000e-01
+                  3.310000000000e-02               3.259100000000e-01})
   (type: [am = S]
     {exp coef:0} = {
                   1.457000000000e-01               1.000000000000e+00})
@@ -794,7 +822,7 @@ sodium:"aug-cc-pVTZ": [
                   3.310000000000e-02               1.000000000000e+00})
   (type: [am = S]
     {exp coef:0} = {
-                  1.290000000000e-02               1.000000000000e+00})
+                  1.200000000000e-02               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   3.169000000000e+02               2.075320000000e-03
@@ -804,7 +832,9 @@ sodium:"aug-cc-pVTZ": [
                   3.363000000000e+00               3.821540000000e-01
                   1.310000000000e+00               3.981780000000e-01
                   4.911000000000e-01               1.528780000000e-01
-                  2.364000000000e-01              -4.375400000000e-03})
+                  2.364000000000e-01              -4.375400000000e-03
+                  8.733000000000e-02               6.295820000000e-03
+                  3.237000000000e-02              -1.567690000000e-03})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   3.169000000000e+02              -3.297270000000e-04
@@ -814,7 +844,9 @@ sodium:"aug-cc-pVTZ": [
                   3.363000000000e+00              -6.399680000000e-02
                   1.310000000000e+00              -7.044360000000e-02
                   4.911000000000e-01              -3.758360000000e-02
-                  2.364000000000e-01               1.770430000000e-01})
+                  2.364000000000e-01               1.770430000000e-01
+                  8.733000000000e-02               5.667070000000e-01
+                  3.237000000000e-02               3.961430000000e-01})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   8.733000000000e-02               1.000000000000e+00})
@@ -823,23 +855,23 @@ sodium:"aug-cc-pVTZ": [
                   3.237000000000e-02               1.000000000000e+00})
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
-                  7.450000000000e-03               1.000000000000e+00})
+                  9.000000000000e-03               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  1.260000000000e-01               1.000000000000e+00})
+                  2.998000000000e-01               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  2.940000000000e-01               1.000000000000e+00})
+                  1.285000000000e-01               1.000000000000e+00})
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
-                  4.680000000000e-02               1.000000000000e+00})
+                  4.440000000000e-02               1.000000000000e+00})
   (type: [(am = F puream = 1)]
     {exp coef:0} = {
-                  2.520000000000e-01               1.000000000000e+00})
+                  2.417000000000e-01               1.000000000000e+00})
   (type: [(am = F puream = 1)]
     {exp coef:0} = {
-                  9.400000000000e-02               1.000000000000e+00})
- ]
+                  8.650000000000e-02               1.000000000000e+00})
+]
 %
 % BASIS SET: (15s,9p,2d,1f) -> [5s,4p,2d,1f]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
