temporary and artificial change in aug-cc-pvxz-ri basis sets

--- a/lib/basis/aug-cc-pvdz-ri.kv
+++ b/lib/basis/aug-cc-pvdz-ri.kv
@@ -67,6 +67,81 @@ basis: (
    1.8631232694 1.0000000
   })
  ]
+% The following basis is indeed cc-pvdz-ri for lithium; added here for certain computations. 
+ lithium: "aug-cc-pVDZ-RI": [
+  (type: [am=s]
+   {exp coef:0} = {
+   30.407500000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   7.5880500000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   2.5668000000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   0.78733600000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   0.34535400000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   0.16047400000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   0.92345500000e-01 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   6.7159800000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   2.3326400000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   0.77280900000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   0.18373900000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   0.78394600000e-01 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   1.4928400000 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   0.57526700000 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   0.24152100000 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   0.14201500000 1.0000000
+  })
+  (type: [(am=f puream=1)]
+   {exp coef:0} = {
+   1.6177500000 1.0000000
+  })
+  (type: [(am=f puream=1)]
+   {exp coef:0} = {
+   0.36163100000 1.0000000
+  })
+ ] 
   boron: "aug-cc-pVDZ-RI": [
   (type: [am=s]
    {exp coef:0} = {
