--- a/lib/basis/aug-cc-pvtz-ri.kv
+++ b/lib/basis/aug-cc-pvtz-ri.kv
@@ -115,6 +115,101 @@ basis: (
    2.4757914715 1.0000000
   })
  ]
+% indeed cc-pvtz-ri for lithium; added here for certain calcs.
+ lithium: "aug-cc-pVTZ-RI": [
+  (type: [am=s]
+   {exp coef:0} = {
+   98.020900000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   20.490600000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   6.2300500000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   1.9799500000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   0.81248000000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   0.30282100000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   0.13281700000 1.0000000
+  })
+  (type: [am=s]
+   {exp coef:0} = {
+   0.68715100000e-01 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   9.9815300000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   2.7421200000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   0.99513200000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   0.45544900000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   0.19061500000 1.0000000
+  })
+  (type: [am=p]
+   {exp coef:0} = {
+   0.85920300000e-01 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   3.9089500000 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   0.95036400000 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   0.27370300000 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   0.14883900000 1.0000000
+  })
+  (type: [(am=d puream=1)]
+   {exp coef:0} = {
+   0.74647700000e-01 1.0000000
+  })
+  (type: [(am=f puream=1)]
+   {exp coef:0} = {
+   0.97949400000 1.0000000
+  })
+  (type: [(am=f puream=1)]
+   {exp coef:0} = {
+   0.36217100000 1.0000000
+  })
+  (type: [(am=f puream=1)]
+   {exp coef:0} = {
+   0.18252600000 1.0000000
+  })
+  (type: [(am=g puream=1)]
+   {exp coef:0} = {
+   0.30000000000 1.0000000
+  })
+ ] 
   boron: "aug-cc-pVTZ-RI": [
   (type: [am=s]
    {exp coef:0} = {
